<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="10"
    >


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.1"
        android:layout_alignParentTop="true"
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/callhistop"
        android:weightSum="10"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/logg"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:src="@drawable/wr"
            android:padding="4dp"
            />
        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="1 new message"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"

            />
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:src="@drawable/calling"
            android:padding="4dp"
            />


    </LinearLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drwr"
        android:layout_weight="9.8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/fragmntcont"
            >

        </FrameLayout>

        <LinearLayout
            android:background="#0D193A"
            android:layout_gravity="left"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileimage"
                android:src="@drawable/boy0"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                >



            </de.hdodenhof.circleimageview.CircleImageView>
            <TextView
                android:id="@+id/profilename"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="Masood Ahmad"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/logout"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="65dp"
                android:text="Logout"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>












    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"

        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:background="@drawable/callhistop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottomnav"
            android:id="@+id/botmnav"
            >
        </com.google.android.material.bottomnavigation.BottomNavigationView>




    </RelativeLayout>




</LinearLayout>