<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="@drawable/background"

    >

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="430dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="260dp"
        android:weightSum="30"
        android:orientation="vertical"
        >
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome back!"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30dp"
            />
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please login to your account."
            android:textColor="#868686"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/logemail"
            android:layout_weight="4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Email address"
            android:textColorHint="#868686"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:backgroundTint="#525151"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot?"
                android:textColor="#4A4875"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="240dp"
                android:textSize="14dp"/>

            <EditText
                android:id="@+id/logpass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#525151"
                android:hint="Password"

                android:textColor="@color/white"
                android:textColorHint="#868686"
                android:textSize="15dp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/logbtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/signupbtn" />
            <TextView
                android:layout_marginTop="12dp"
                android:layout_marginLeft="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/registerbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:text="REGISTER NOW"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />


        </RelativeLayout>





    </LinearLayout>

</LinearLayout>