<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <RelativeLayout
        android:layout_centerInParent="true"
        android:id="@+id/rl"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        >
        <TextView
            android:padding="10dp"
            android:id="@+id/singlechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chatbckground"
            android:text="sdnfijsdbvhsdsmndbdjasbdiuahsdiuashdioasdhoiasdbcyuwebfiuwdabvy"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_marginBottom="0dp"
            />
        <TextView
            android:layout_below="@+id/singlechat"
           android:layout_alignRight="@+id/singlechat"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msgtime"
            android:text="20:21"
            android:textColor="@color/white"

            />

        <ImageView
            android:id="@+id/showimg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"/>


    </RelativeLayout>



</RelativeLayout>